# nemu

./: .drone.yml  .gitattributes  .gitignore  .travis.yml  CHANGES  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  Makefile  NEWS  README.md  README_Build.md  bitbucket-pipelines.yml  cmake_uninstall.cmake.in  guest.cpp  hostinfo.cpp  install_window.cpp  install_window.h  nemu-0.3.0.ebuild  nemu-1.0.0.ebuild  nemu.cfg.sample  new_iface_concept.c  qemu-manage-0.2.0.ebuild  qemu-manage-0.2.1.ebuild  qemu-manage.cfg.sample  qemu_hostinfo.cpp  qemu_manage.cfg.sample  qemu_manage.cpp  qemu_manage.h  qemudb.cpp  qengui-0.3.0.ebuild  qengui.cfg.sample  remote_api.txt  setup_qemu_nonroot  stuff.cpp  test.cfg  uncrustify.cfg  upgrade_db.sh  (+1 more)
.copr/: Makefile  Packages
.github/: CODEOWNERS
.github/workflows/: checkpatch.yml  freebsd.yml  linux.yml  linux_musl.yml  macosx.yml  tests.yml
ci/: Dockerfile  codespell-sarif.py  cppcheck-sarif.py  docker-compose.yml  nginx.conf
ci/images/alpine/: Dockerfile
ci/images/debian/: Dockerfile
cmake/Modules/: BuildNcurses.cmake  BuildQEMU.cmake  FindCurses.cmake  FindGraphviz.cmake  FindProcps.cmake  Findlibusb-1.0.cmake  GetGLibcVersion.cmake
cmake/Tests/: net_if.c  sendfile.c
debian/: changelog  control  copyright  docs  rules  watch
lang/: CMakeLists.txt  update.sh
lang/ru/: nemu.po  qemu-manage.po  qemu-manager.po
libspice/: CMakeLists.txt  sp_core.h  sp_proto.c  sp_proto.h  sp_screen.c  sp_utils.c  sp_utils.h
libspice/include/: libspice.h
man/: CMakeLists.txt  nemu.1.in
patches/: delete_af_unix_socket-2.12.0.patch  ncurses-6.2-value_list.patch  qemu-fix-clean-qmp-socket-2.12.0.patch  qemu-migration-fix.patch  qemu-qmp-savevm-2.11.0+.patch  qemu-qmp-savevm-2.12.0.patch  qemu-qmp-savevm-3.1.0.patch  qemu-qmp-savevm-4.1.0.patch  qemu-qmp-savevm-4.2.0+.patch  qemu-qmp-savevm-5.0.0+.patch  qemu-qmp-savevm.patch
pkg/linux/arch/: PKGBUILD
pkg/linux/debian/: Makefile  changelog  control  copyright  rules
pkg/linux/gentoo/: metadata.xml  nemu-1.0.0.ebuild  nemu-1.1.0.ebuild  nemu-1.2.0.ebuild  nemu-1.3.0.ebuild  nemu-1.3.1.ebuild  nemu-1.4.0.ebuild  nemu-2.1.1.ebuild  nemu-2.2.1.ebuild  nemu-2.2.3.ebuild  nemu-2.3.0.ebuild  nemu-2.4.0.ebuild  nemu-2.5.1.ebuild  nemu-2.6.0.ebuild  nemu-3.0.0.ebuild  nemu-9999.ebuild
pkg/linux/nixos/: module.nix  package.nix
pkg/linux/rpm/: CMakeLists.txt  DESCRIPTION  postinstall.sh  postuninstall.sh
sh/: 42-net-macvtap-perm.rules  43-usb.rules  convert_kern_ver.sh  git_get_version.sh  nemu.bash  nemu.zsh  ntty  pci_passthrough_example.sh  setup_nemu_nonroot.sh  tty_geom.sh  upgrade_db.sh  vfio_igb_mgr.sh
spice_client/: CMakeLists.txt  spice_client.c
src/: Makefile  ]  add_disk_window.cpp  add_disk_window.h  add_vm_window.cpp  add_vm_window.h  base_form_window.cpp  base_form_window.h  clone_window.cpp  clone_window.h  edit_net_window.cpp  edit_net_window.h  edit_window.cpp  edit_window.h  guest.cpp  guest.h  hostinfo.cpp  hostinfo.h  install_window.cpp  install_window.h  misc.cpp  misc.h  nemu.cpp  nemu.h  network.cpp  network.h  nm_9p_share.c  nm_9p_share.h  nm_add_drive.c  nm_add_drive.h  nm_add_vm.c  nm_add_vm.h  nm_cfg_file.c  nm_cfg_file.h  nm_clone_vm.c  nm_clone_vm.h  nm_core.h  nm_curses.c  nm_curses.h  nm_database.c  (+85 more)
src/lang/: Makefile  nemu.mo
src_cpp/: add_disk_window.cpp  add_vm_window.cpp  clone_window.cpp  edit_window.cpp  guest.cpp  guest.h  hostinfo.cpp  misc.cpp  misc.h  nemu.h  window.cpp
test/: CMakeLists.txt  nemu.cfg.in  ova_test.py  run.sh  tmux.conf  utils.py  vm_test.py
test/testdata/: deb_a.img.tar.xz  dsl.ova
upgrade_db/: HOWTO  upgrade_db.sh  upgrade_db_0.3.0.sql
